--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -1,6 +1,6 @@
 <div class="admin-container">
     <div class="nav-btns">
-        <button onclick="showSection('user')" data-section="user" class="active">Manager </button>
+        <button onclick="showSection('user')" data-section="user" class="active">User </button>
     </div>
     <div id="user" class="section active">
         <button class="btn btn-add-user btn-add-item" data-form-id="addUserForm">👥 Thêm người dùng</button>
