--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -337,7 +337,7 @@ th {
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: #dc3545; /* Màu đỏ */
+    background-color: #f7b800;
     color: white;
     border: none;
     border-radius: 50%; /* Nút tròn */
@@ -353,7 +353,7 @@ th {
 }
 
 .btn-close-form:hover {
-    background-color: #c82333;
+    background-color: #f7b800;
 }
 
 /* Các kiểu nút chung (đảm bảo đã có trong style.css) */
