--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -29,34 +29,25 @@
     </div>
     <!-- Sidebar -->
      <div id="sidebar" class="d-flex">
-        <nav class="sidebar bg-dark text-light p-3">
-            <h4 id="role" class="text-warning"><i class="fa-solid fa-store"></i></h4>
-            <ul id="sidebar-menu" class="nav flex-column">
-                <!--Phân cấp nút home-->
-                <li class="nav-item nav-home">
-                    <a class="nav-link active" data-bs-toggle="collapse" href="#homeSubmenu" role="button" aria-expanded="false" aria-controls="homeSubmenu">
-                        <i class="fa-solid fa-house"></i> Home</a>
-                    <div class="collapse show" id="homeSubmenu">
-                        <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="./manager.html" class="nav-link ps-4 py-2" data-page="manager">User</a></li>
-                            <li><a href="./store.html" class="nav-link ps-4 py-2" data-page="store">Store</a></li>
-                            <li><a href="./mission.html" class="nav-link ps-4 py-2" data-page="role">Product</a></li>
-                        </ul>
-                    </div>
-                </li>
-                <li class="nav-item nav-report"><a href="report.html" class="nav-link"><i class="fa-solid fa-file-invoice"></i> Report</a></li>
-                <li class="nav-item nav-goods"><a href="goods.html" class="nav-link"><i class="fa-solid fa-box" ></i> Goods</a></li>
-                <li class="nav-item nav-order"><a href="order.html" class="nav-link"><i class="fa-solid fa-clipboard-list" ></i> Order</a></li>
-                <li class="nav-item nav-staff"><a href="staff.html" class="nav-link"><i class="fa-solid fa-user" ></i> Staff</a></li>
-                <li class="nav-item nav-after-sale"><a href="after-sale.html" class="nav-link"><i class="fa-solid fa-headset" ></i> After-sale</a></li>
-                <li class="nav-item nav-review"><a href="review.html" class="nav-link"><i class="fa-solid fa-star"></i> Review</a></li>
-                <li class="nav-item mt-auto">
-                    <a href="#" class="nav-link text-danger" onclick="logout()">
-                        <i class="fa-solid fa-right-from-bracket"></i>Logout
-                    </a>
-                </li>
-            </ul>
-        </nav>
+        <div id="sidebar" class="d-flex col-lg-3 col-md-5 col-sm-12">
+            <nav class="sidebar bg-dark text-light p-3">
+                <h4 id="role" class="text-warning"><i class="fa-solid fa-store"></i></h4>
+                <ul id="sidebar-menu" class="nav flex-column">
+                    <li class="nav-item nav-home"><a href="index.html" class="nav-link"><i class="fa-solid fa-house"></i> Home</a></li>
+                    <li class="nav-item nav-report"><a href="report.html" class="nav-link"><i class="fa-solid fa-file-invoice"></i> Report</a></li>
+                    <li class="nav-item nav-goods"><a href="goods.html" class="nav-link"><i class="fa-solid fa-box"></i> Goods</a></li>
+                    <li class="nav-item nav-order"><a href="order.html" class="nav-link"><i class="fa-solid fa-clipboard-list"></i> Order</a></li>
+                    <li class="nav-item nav-staff"><a href="staff.html" class="nav-link"><i class="fa-solid fa-user"></i> Staff</a></li>
+                    <li class="nav-item nav-after-sale"><a href="after-sale.html" class="nav-link"><i class="fa-solid fa-headset"></i> After-sale</a></li>
+                    <li class="nav-item nav-review"><a href="review.html" class="nav-link"><i class="fa-solid fa-star"></i> Review</a></li>
+                    <li class="nav-item mt-auto">
+                        <a href="#" class="nav-link text-danger" onclick="logout()">
+                            <i class="fa-solid fa-right-from-bracket"></i>Logout
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
      </div>
     <!-- logo staff -->
     <div class="main-header d-flex bg-dark" style="width: 70%; margin-left: 280px; height: 50px; justify-content: space-between; display: flex;align-items: center; border-radius: 8px;">
