--- a/src/main/resources/templates/manager.html
+++ b/src/main/resources/templates/manager.html
@@ -6,7 +6,7 @@
         <button class="btn btn-add-user btn-add-item" data-form-id="addUserForm">👥 Thêm người dùng</button>
         <div id="addUserForm" class="add-form-container">
             <h3>Thêm người dùng mới</h3>
-            <button class="btn btn-close-form">✖️ Hủy</button>
+            <button class="btn btn-close-form">✖️</button>
             <form action="">
                 <div class="form-grid">
                     <div class="form-group">
@@ -17,7 +17,6 @@
                         <label for="roleSelect">Vai trò</label>
                         <select id="roleSelect" class="form-control-custom">
                             <option value="">Chọn vai trò</option>
-
                         </select>
                     </div>
                     <div class="form-group">
@@ -44,14 +43,13 @@
                 </div>
                 <div class="form-actions">
                     <button class="btn btn-success" id="Them" type="button">➕ Thêm người dùng</button>
-                    <button class="btn btn-secondary btn-close-form" type="button">Hủy</button>
                 </div>
             </form>
         </div>
         <table>
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th>Mã</th>
                     <th>Tên người dùng</th>
                     <th>Tên đăng nhập</th>
                     <th>Mật khẩu</th>
