--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -7,7 +7,7 @@
 
         <div id="addStoreForm" class="add-form-container" style="display: none;">
             <h3>Thêm cửa hàng mới</h3>
-            <button class="btn btn-close-form">✖️ Hủy</button>
+            <button class="btn btn-close-form">✖️</button>
             <div class="form-grid">
                 <div class="form-group">
                     <label for="storeName">Tên cửa hàng</label>
@@ -24,21 +24,21 @@
                 <div class="form-group">
                     <label for="storeManager">Quản lý</label>
                     <select id="storeManager" class="form-control-custom">
-                        <option value="">Chọn quản lý</option>
+                        <option value="Chọn quản lý"></option>
                     </select>
                 </div>
             </div>
             <div class="form-actions">
                 <button class="btn btn-success" id="Them">➕ Thêm cửa hàng</button>
-                <button class="btn btn-secondary btn-close-form">Hủy</button>
             </div>
         </div>
         <table>
             <thead>
                 <tr>
-                    <th>ID</th>
+                    <th>Mã</th>
                     <th>Tên cửa hàng</th>
                     <th>Địa chỉ</th>
+                    <th>Số điện thoại</th>
                     <th>Trạng thái</th>
                     <th>Thao tác</th>
                 </tr>
@@ -80,7 +80,7 @@
         const roles_data = await res.json();
 
 
-        ls_role.innerHTML = `<option value="">Chọn vai trò</option>` +
+        ls_role.innerHTML = `<option value="">Chọn quản lý</option>` +
             roles_data.map(item => `
                 <option value="${item.id}">${item.name}</option>
             `).join("");
@@ -118,6 +118,7 @@
         <td>${u.store_id}</td>
         <td><input type="text" value="${u.ten_cua_hang}" style="border: 0px;background: none;"></td>
         <td><input type="text" value="${u.dia_chi}" style="border: 0px;background: none;"></td>
+        <td><input type="text" value="${u.contact}" style="border: 0px;background: none;"></td>
         <td><button class="btn blue">Hoạt động</button></td>
         <td>
             <button class="btn" onclick = "logRowData(this, '${u.store_id}')">Chỉnh sửa</button> 
@@ -152,6 +153,7 @@
                     store_id: data.store_id,
                     ten_cua_hang: data.ten_ch,
                     dia_chi: data.dia_chi,
+                    contact: data.contact[0]
                 });
                 renderStoreTable(store);
             })
@@ -168,8 +170,8 @@
         const data = {
             id: ids,
             store_name: ten_cua_hangInput.value,
-            address: dia_chiInput.value
-            
+            address: dia_chiInput.value,
+            contact: row.querySelector("input[type='text']").value,
         };
         fetch("http://localhost:8080/api/admin/chinh_sua_store", {
             method: "PATCH",
