LeCuongQuoc --update UI

--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -50,8 +50,8 @@
      <!-- Main Content -->
      <div class="main-content p-4 w-100">
         <!-- Header -->
-        <div class="main-header d-flex bg-dark">
-            <h5 id="pager-title" class="text-warning"><i class="fa-solid fa-shop"> Order</i></h5>
+        <div class="py-2 d-flex  justify-content-center w-100">
+            <h5 id="pager-title" class="text-dark"><i class="fa-solid fa-shop"> Order</i></h5>
         </div>
         <div class="pager d-flex row g-3">
             <script>
