--- a/src/main/resources/templates/after-sale.html
+++ b/src/main/resources/templates/after-sale.html
@@ -50,8 +50,8 @@
      <!-- Main Content -->
      <div class="main-content p-4 w-100">
         <!-- Header -->
-        <div class="main-header d-flex bg-dark">
-            <h5 class="text-warning"><i class="fa-solid fa-shop"> After-sale</i></h5>
+        <div class="py-2 px-2 d-flex  justify-content-center w-100" style="background-color: none;">
+            <h5 class="text-dark"><i class="fa-solid fa-shop"> After-sale</i></h5>
         </div>
     <div class="container mt-5">
     <h3 class="text-warning mb-4"><i class="fa-solid fa-comments"></i> Phản hồi từ khách hàng</h3>
