--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -50,9 +50,9 @@
      <!-- Main Content -->
      <div class="main-content p-4 w-100">
         <!-- Header -->
-        <div class="main-header d-flex bg-dark">
-            <h5 class="text-warning"><i class="fa-solid fa-box"> Goods</i></h5>
-            <button id="inventory-order" class="btn btn-outline-warning"><i class="fa-solid fa-box"></i> Order inventory</button>
+        <div class=" d-flex py-2  d-flex justify-content-center">
+            <h5 class="text-dark"><i class="fa-solid fa-box"> Goods</i></h5>
+            <button id="inventory-order" class="btn btn-outline-warning" style="right: -40%; position: relative;"><i class="fa-solid fa-box"></i> Order inventory</button>
             <script>
                 document.getElementById("inventory-order").addEventListener("click",function() {
                     window.location.href = "inventory-order-detail.html";
