--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -50,8 +50,8 @@
         </div>
      </div>
     <!-- logo staff -->
-    <div class="main-header d-flex bg-dark" style="width: 70%; margin-left: 280px; height: 50px; justify-content: space-between; display: flex;align-items: center; border-radius: 8px;">
-        <h5 id="pager-title" class="text-warning"><i class="fa-solid fa-user"></i> Staff</h5>
+    <div class=" d-flex  py-2 px-2 m-0 d-flex justify-content-center" style="width: 100%; height: 50px; justify-content: space-between; display: flex;align-items: center;">
+        <h5 id="pager-title" class="text-dark"><i class="fa-solid fa-user"></i> Staff</h5>
     </div>
     <div class="container mt-5">
         <div class="p-4" style="background: #f7b800; border-radius: 10px; border: 3px solid #000;">
@@ -81,7 +81,12 @@
                             <label for="storeSelect">Cửa hàng</label>
                             <select id="storeSelect" class="form-control-custom">
                                 <option value="">Chọn cửa hàng</option>
-                                
+                                <option value="Cửa hàng Quận 1">Cửa hàng Quận 1</option>
+                                <option value="Cửa hàng Quận 2">Cửa hàng Quận 2</option>
+                                <option value="Cửa hàng Quận 3">Cửa hàng Quận 3</option>
+                                <option value="Cửa hàng Quận 4">Cửa hàng Quận 4</option>
+                                <option value="Cửa hàng Quận 5">Cửa hàng Quận 5</option>
+                                <option value="Cửa hàng Quận 6">Cửa hàng Quận 6</option>
                             </select>
                         </div>
                         <div class="form-group">
