--- a/src/main/resources/templates/store.html
+++ b/src/main/resources/templates/store.html
@@ -132,6 +132,9 @@
             store_id: generateStoreID(),
             ten_ch: document.getElementById("storeName").value,
             dia_chi: document.getElementById("storeAddress").value,
+            contact: [
+                document.getElementById("storePhone").value,
+            ],
 
         };
         console.log(data)
