Danh_fix_staff.html

--- a/src/main/resources/templates/staff.html
+++ b/src/main/resources/templates/staff.html
@@ -51,7 +51,7 @@
      </div>
     <!-- logo staff -->
     <div class=" d-flex  py-2 px-2 m-0 d-flex justify-content-center" style="width: 100%; height: 50px; justify-content: space-between; display: flex;align-items: center;">
-        <h5 id="pager-title" class="text-dark"><i class="fa-solid fa-user"></i> Staff</h5>
+        <h5 id="pager-title" class="text-dark"><i class="fa-solid fa-user"></i> STAFF</h5>
     </div>
     <div class="container mt-5">
         <div class="p-4" style="background: #f7b800; border-radius: 10px; border: 3px solid #000;">
