--- a/src/main/resources/templates/goods.html
+++ b/src/main/resources/templates/goods.html
@@ -63,14 +63,14 @@
             <table id="productTable" class="table table-dark table-bordered table-hover">
                 <thead class="table-warning text-dark">
                     <tr>
-                        <th>.Id</th>
-                        <th>.Prod</th>
-                        <th>.UoM</th>
-                        <th>.Quan</th>
+                        <th>STT</th>
+                        <th>Tên sản phẩm</th>
+                        <th>Đơn vị</th>
+                        <th>Số lượng tồn</th>
                     </tr>
                 </thead>
                 <tbody>
-
+                    
                 </tbody>
             </table>
         </div>
