--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,9 +40,9 @@
                         <i class="fa-solid fa-house"></i> Home</a>
                     <div class="collapse show" id="homeSubmenu">
                         <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                            <li><a href="./manager.html" class="nav-link ps-4 py-2" data-page="manager">User</a></li>
-                            <li><a href="./store.html" class="nav-link ps-4 py-2" data-page="store">Store</a></li>
-                            <li><a href="./mission.html" class="nav-link ps-4 py-2" data-page="role">Product</a></li>
+                            <li><a href="./manager.html" class="nav-manager nav-link ps-4 py-2" data-page="manager">User</a></li>
+                            <li><a href="./store.html" class="nav-store nav-link ps-4 py-2" data-page="store">Store</a></li>
+                            <li><a href="./mission.html" class="nav-product nav-link ps-4 py-2" data-page="role">Product</a></li>
                         </ul>
                     </div>
                 </li>
