LeCuongQUoc -- update đơn hàng và chi tiết đơn hàng trong report.JS và chức năng Admin.Java

--- a/src/main/resources/templates/report.html
+++ b/src/main/resources/templates/report.html
@@ -145,8 +145,9 @@
                             <tr>
                                 <th>Mã hoá đơn</th>
                                 <th>Nhân viên</th>
-                                <th>Ngày</th>
-                                <th>Cửa hàng</th>
+                                <th class="w-25">Ngày</th>
+                                <th class="w-25">Cửa hàng</th>
+                                <th>Xem chi tiết</th>
                             </tr>
                         </thead>
                         <tbody id="bill-body"></tbody>
